src/css/styles.css
body {
  font-family: Roboto, HelveticaNeue, Arial, sans-serif;
}
a {
  text-decoration: none;
  color: inherit;
}
li {
  list-style: none;
  display: inline-block;
}

ul {
  padding: 0;
  margin: 0;
}

.desktop-visible-only {
  display: none;
}

.main__logo {
  display: block;
  width: 11rem;
  margin: 2rem auto;
}

.searchbar__control {
  display: flex;
  position: relative;
  margin: 0 auto;
  padding: 0.3rem 0.5rem 0 1rem;
  max-width: 40rem;
  align-items: center;
  height: 2.5rem;
  border: 1px solid #dadce0;
  border-radius: 24px;
}

.searchbar__icon {
  display: flex;
  width: 1.25rem;
  margin-top: -0.2rem;
  margin-right: 0.5rem;
  fill: #9aa0a6;
}
.searchbar__input {
  outline: none;
  border: none;
  width: 100%;
  height: 80%;
  flex: 1;
  font-size: 1rem;
  margin-top: -0.1rem;
  color: #101010;
  position: relative;
  margin-left: 1.5%;
}

.searchbar__options {
  display: block;
  text-align: center;
  padding-top: 2rem;
}

.searchbar__offered-language {
  font-size: 13px;
  font-family: arial, sans-serif;
}
.searchbar__offered-language a {
  color: #1967d2;
}

.nav__options {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0.4rem;
}

.item__button {
  margin: 0 0.5rem 0 0.8rem;
  position: relative;
  bottom: 0.2rem;
  color: #70757a;
  font-size: 0.75rem;
  font-weight: 600;
}

.item__button--semivisible-blue-highlight {
  padding: 1rem 0;
  text-transform: uppercase;
}

.item__button--semivisible-blue-highlight:hover {
  color: #4285f4;
  border-bottom: 2px solid #4285f4;
}

.item__sign-in {
  color: #fff;
  background: #2b7de9;
  display: inline-block;
  width: 75.9%;
  font-weight: bold;
  border-radius: 5px;
  padding: 0.18rem 0.75rem;
  width: 3.12rem;
  height: 1.68rem;
  margin-left: 0.93rem;
  line-height: 1.68rem;
  font-family: Google Sans, Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 0.81rem;
  letter-spacing: 0.25px;
  text-align: center;
}

.item__icon--square {
  background-image: url(../resources/i1_1967ca6a.png);
  background-size: 528px 68px;
  width: 1.87rem;
  height: 1.87rem;
  box-sizing: border-box;
  display: inline-block;
  background-position: -127px -36px;
  opacity: 0.55;
  color: #000;
  cursor: pointer;
  text-decoration: none;
  background-repeat: no-repeat;
}

.footer {
  position: absolute;
  bottom: 0;
  color: #0000008a;
  width: 100%;
  background: #f2f2f2;
}

.footer__location {
  padding: 0.5rem 0 0.6rem 1rem;
  display: block;
  font-size: 0.9rem;
  border-bottom: 1px solid #dadce0;
  margin-bottom: 0.93rem;
}

.footer__links {
  text-align: center;
}

.footer__item {
  padding: 0.4rem;
  font-size: 0.81rem;
}
@media (min-width: 900px) {
  .mobile-visible-only {
    display: none;
  }
  .desktop-visible-only {
    display: initial;
  }
  .nav__options {
    justify-content: flex-end;
  }

  .item__button--semivisible-blue-highlight {
    padding: inherit;
    text-transform: inherit;
  }

  .item__button--semivisible-blue-highlight:hover {
    color: inherit;
    border-bottom: inherit;
  }

  .item__button {
    color: rgba(0, 0, 0, 0.87);
    font-weight: initial;
  }

  .item__button:hover {
    text-decoration: underline;
  }

  .item__sign-in:hover {
    transform: scale(1.02);
  }
  .item__icon--square:hover {
    opacity: 1;
  }

  .main__logo {
    display: block;
    width: 19rem;
    margin: 8rem auto 2rem auto;
  }
  .searchbar__control {
    width: 34rem;
    outline: none;
  }
  .searchbar__control:hover,
  .searchbar__control:active {
    box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
  }

  .searchbar__options {
    padding-top: 1.6rem;
  }
  .searchbar__buttons {
    display: block;
    margin-bottom: 1.6rem;
  }
  .searchbar__buttons button {
    background-color: #f8f9fa;
    border: none;
    width: 8.43rem;
    height: 2.12rem;
    border-radius: 4px;
    margin: 0.25rem;
    font-size: 0.87rem;
    font-family: arial, sans-serif;
  }

  .searchbar__buttons button:hover {
    box-shadow: inset 0 0 3px #cacaca;
    cursor: pointer;
  }
  .searchbar__offered-language a {
    color: #1a0dab;
  }
  .footer__links {
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
  }
  .footer__item {
    padding: 0.5rem 0 0.6rem 1rem;
  }
  .footer__links--left {
    flex-direction: row;
  }
  .footer__links--right .footer__item {
    padding: 0.5rem 1rem 0.6rem 0rem;
  }
  .footer__item--desktop-only-order {
    order: 1;
  }
}

